am-idm-dj/openidm-gitsync.yaml
# Run OpenIDM on k8
# Service definition
apiVersion: v1
kind: Service
metadata:
  name: openidm
spec:
  selector:
    name: openidm
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30100
